test/sema/while.dmz
// RUN: dmz %s -res-dump 2>&1 | filecheck %s
fn foo() -> void {}

fn bar() -> i32 { return 1; }

fn main() -> void {
    while (bar()) {}

    // CHECK: [[# @LINE + 1 ]]:15: error: unexpected type in condition 'void'
    while (foo()) {}
}
// CHECK-NOT: {{.*}}
